syntax = "proto3";
package StorageMaintainerMessage;

//声明grpc服务
service Greeter {
    /*
    以下 分别是 服务端 推送流， 客户端 推送流 ，双向流。
    */
    rpc GetStream (StreamReqData) returns (stream StreamResData){}
    rpc PutStream (stream StreamReqData) returns (StreamResData){}
    rpc AllStream (stream StreamReqData) returns (stream StreamResData){}
}


//stream请求结构
message StreamReqData {
    string strChannelID = 1;
    string strRelativePath = 2;
    string strMountPoint = 3;
    string strDate = 4;
    string strRecordID = 5;
    int64 nStartTime = 6;
    int32 nType = 7;
}
//stream返回结构
message StreamResData {
    string strChannelID = 1;
    int32 nRespond = 2;   //-1 挂载点不存在  0 操作中  1 删除成功
    string strRecordID = 3;
    string strDate = 4;
    string strMountPoint = 5;
    int64 nStartTime = 6;
    int32 nType = 7;
}